Fix to hr causing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ hr {
 		rgba(179, 179, 179, 0)
 	);
 
-	margin: -0.5rem;
+	margin: -0.5rem 0;
 }
 
 body > hr {
